Removed fixed navbar, causes sometimes issues on mobile

--- a/src/App/Content/App/03Authenticated.css
+++ b/src/App/Content/App/03Authenticated.css
@@ -1,3 +1,3 @@
 ﻿body.authenticated {
-    padding-top: 50px;
+    padding-top: 0;
 }
